--- a/style.css
+++ b/style.css
@@ -1,10 +1,37 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-  background-color: #f0f2f5;
+  /* background-color: #f0f2f5; */
   color: #1c1e21;
   margin: 0;
   padding: 15px;
   width: 500px;
+}
+
+.background-parent-div {
+  position: fixed;
+  inset: 0;
+  z-index: -10;
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  background-image: linear-gradient(to right, #8080800a 1px, transparent 1px),
+  linear-gradient(to bottom, #8080800a 1px, transparent 1px);
+  background-size: 14px 24px;
+}
+
+.background-div {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: -10;
+  margin: auto;
+  height: 310px;
+  width: 310px;
+  border-radius: 50%;
+  background-color: #00fff3;
+  opacity: 0.2;
+  filter: blur(100px);
 }
 
 h1 {
